# amd-hackathon

./: .gitignore  README.md  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/api/: index.py
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  assistant.py  corrections.py  decode.py  health.py  merchants.py  stats.py  transactions.py
backend/app/core/: config.py  dates.py  db.py  seed.py
backend/app/engine/: __init__.py  cache.py  classifier.py  cleaner.py  enrich.py  pipeline.py  validator.py
backend/app/engine/matchers/: __init__.py  base.py  exact.py  fuzzy.py  vector.py
backend/app/models/: transaction.py
backend/app/repositories/: corrections.py  merchant_repo.py  transaction_repo.py
backend/app/schemas/: __init__.py  assistant.py  category.py  decode.py  merchant.py  views.py
backend/app/services/: __init__.py  llm.py
backend/data/: generate.py  merchants.yaml  mock_transactions.json  taxonomy.yaml
backend/data/eval/: transactions.jsonl
backend/data/khawarizm/: golden_set.csv  merchants.csv  users.csv
backend/eval/: metrics.py  run.py
backend/tests/: test_api.py  test_engine.py
frontend/: next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AiBanner.tsx  BottomNav.tsx  CorrectableTxList.tsx  DecodeShowcase.tsx  Markdown.tsx  ReportCard.tsx  Sidebar.tsx  TransactionsExplorer.tsx  TxTable.tsx  Typewriter.tsx  charts.tsx  icons.tsx  ui.tsx
frontend/lib/: api.ts  insights.ts  types.ts  (+1 more)
(+3 files in other folders)
